added AuthenticationControllerImplTest